--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
     </dependencies>
     <objects>
@@ -77,8 +76,8 @@
                                     <action selector="toggleHideMainWindowWhenInactive:" target="Voe-Tx-rLC" id="DTk-mC-D3V"/>
                                 </connections>
                             </menuItem>
-                            <menuItem isSeparatorItem="YES" id="7O0-yG-yjC"/>
-                            <menuItem title="Create Symlinks…" id="YYF-E4-nzV">
+                            <menuItem isSeparatorItem="YES" hidden="YES" id="7O0-yG-yjC"/>
+                            <menuItem title="Create Symlinks…" hidden="YES" id="YYF-E4-nzV">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="createSymlinks:" target="-1" id="ipC-P4-mvS"/>
