--- a/Blik Mac/GLAMainWindowController.xib
+++ b/Blik Mac/GLAMainWindowController.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAMainWindowController">
@@ -14,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" appearanceType="aqua" frameAutosaveName="Main" animationBehavior="default" id="F0z-JX-Cv5" customClass="GLAMainWindow">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="documentWindow" appearanceType="aqua" frameAutosaveName="Main" id="F0z-JX-Cv5" customClass="GLAMainWindow">
             <windowStyleMask key="styleMask" resizable="YES"/>
             <windowCollectionBehavior key="collectionBehavior" canJoinAllSpaces="YES"/>
             <windowPositionMask key="initialPositionMask" topStrut="YES"/>
@@ -31,9 +30,11 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="43" id="Yq4-h7-UvZ"/>
                         </constraints>
+                        <animations/>
                     </customView>
                     <customView identifier="content" translatesAutoresizingMaskIntoConstraints="NO" id="lUf-gC-iRj" customClass="GLAView">
                         <rect key="frame" x="0.0" y="0.0" width="520" height="277"/>
+                        <animations/>
                     </customView>
                 </subviews>
                 <constraints>
@@ -45,6 +46,7 @@
                     <constraint firstItem="lUf-gC-iRj" firstAttribute="leading" secondItem="IAs-3U-KCq" secondAttribute="leading" id="Zcj-k4-QcT"/>
                     <constraint firstItem="IAs-3U-KCq" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" id="cCs-Ia-1FS"/>
                 </constraints>
+                <animations/>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
